Shell/Generated/ShellParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Shell.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Shell.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
public partial class ShellParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		EOL=1, WS=2, KW_TRUE=3, KW_FALSE=4, KW_IF=5, KW_ELSE=6, KW_FOR=7, KW_IN=8, 
		KW_RETURN=9, KW_LET=10, KW_FUN=11, KW_IS=12, KW_NAMESPACE=13, KW_USING=14, 
		KW_AS=15, TYPE_OBJECT=16, TYPE_ARRAY=17, TYPE_NUMBER=18, TYPE_STRING=19, 
		TYPE_BOOL=20, TYPE_ANY=21, TYPE_NULL=22, LSQR=23, RSQR=24, LCURL=25, RCURL=26, 
		LPAREN=27, RPAREN=28, SYM_PERIOD=29, SYM_COMMA=30, SYM_QUOTE=31, SYM_COLON=32, 
		SYM_DOLLAR=33, OP_ASSGN=34, OP_EQ=35, OP_NE=36, OP_LT=37, OP_LE=38, OP_GT=39, 
		OP_GE=40, OP_NOT=41, OP_OR=42, OP_AND=43, OP_ADD=44, OP_SUB=45, OP_DIV=46, 
		OP_MUL=47, OP_MOD=48, IDENTIFIER=49, STRING=50, NUMBER=51, NONDIGIT=52, 
		DIGIT=53, NONZERO_DIGIT=54, ZERO=55, SIGN=56, INT=57, FRAC=58, EXP=59, 
		HEX=60, UNICODE=61, ESC=62, SAFECODEPOINT=63;
	public const int
		RULE_program = 0, RULE_program_statement = 1, RULE_statement = 2, RULE_load_namespace = 3, 
		RULE_namespace_declaration = 4, RULE_namespaced_statement = 5, RULE_namespaced_declaration = 6, 
		RULE_program_shorthand = 7, RULE_statement_block = 8, RULE_declaration = 9, 
		RULE_function = 10, RULE_function_argument = 11, RULE_control = 12, RULE_control_if = 13, 
		RULE_if_then = 14, RULE_if_then_else = 15, RULE_control_for = 16, RULE_control_return = 17, 
		RULE_expression = 18, RULE_expression_or = 19, RULE_expression_and = 20, 
		RULE_expression_equality = 21, RULE_expression_relational = 22, RULE_expression_addition = 23, 
		RULE_expression_multiplication = 24, RULE_expression_unary = 25, RULE_expression_primary = 26, 
		RULE_function_call = 27, RULE_term = 28, RULE_identifier_namespaced = 29, 
		RULE_value = 30, RULE_bool = 31, RULE_array = 32, RULE_pair = 33, RULE_object = 34, 
		RULE_argument_type_specifier = 35, RULE_value_type_specifier = 36;
	public static readonly string[] ruleNames = {
		"program", "program_statement", "statement", "load_namespace", "namespace_declaration", 
		"namespaced_statement", "namespaced_declaration", "program_shorthand", 
		"statement_block", "declaration", "function", "function_argument", "control", 
		"control_if", "if_then", "if_then_else", "control_for", "control_return", 
		"expression", "expression_or", "expression_and", "expression_equality", 
		"expression_relational", "expression_addition", "expression_multiplication", 
		"expression_unary", "expression_primary", "function_call", "term", "identifier_namespaced", 
		"value", "bool", "array", "pair", "object", "argument_type_specifier", 
		"value_type_specifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\n'", null, "'true'", "'false'", "'if'", "'else'", "'for'", "'in'", 
		"'return'", "'let'", "'fun'", "'is'", "'namespace'", "'using'", "'as'", 
		"'object'", "'array'", "'number'", "'string'", "'bool'", "'any'", "'null'", 
		"'['", "']'", "'{'", "'}'", "'('", "')'", "'.'", "','", "'\"'", "':'", 
		"'$'", "'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'|'", 
		"'&'", "'+'", "'-'", "'/'", "'*'", "'%'", null, null, null, null, null, 
		null, "'0'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "EOL", "WS", "KW_TRUE", "KW_FALSE", "KW_IF", "KW_ELSE", "KW_FOR", 
		"KW_IN", "KW_RETURN", "KW_LET", "KW_FUN", "KW_IS", "KW_NAMESPACE", "KW_USING", 
		"KW_AS", "TYPE_OBJECT", "TYPE_ARRAY", "TYPE_NUMBER", "TYPE_STRING", "TYPE_BOOL", 
		"TYPE_ANY", "TYPE_NULL", "LSQR", "RSQR", "LCURL", "RCURL", "LPAREN", "RPAREN", 
		"SYM_PERIOD", "SYM_COMMA", "SYM_QUOTE", "SYM_COLON", "SYM_DOLLAR", "OP_ASSGN", 
		"OP_EQ", "OP_NE", "OP_LT", "OP_LE", "OP_GT", "OP_GE", "OP_NOT", "OP_OR", 
		"OP_AND", "OP_ADD", "OP_SUB", "OP_DIV", "OP_MUL", "OP_MOD", "IDENTIFIER", 
		"STRING", "NUMBER", "NONDIGIT", "DIGIT", "NONZERO_DIGIT", "ZERO", "SIGN", 
		"INT", "FRAC", "EXP", "HEX", "UNICODE", "ESC", "SAFECODEPOINT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Shell.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ShellParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ShellParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ShellParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public Program_statementContext[] program_statement() {
			return GetRuleContexts<Program_statementContext>();
		}
		public Program_statementContext program_statement(int i) {
			return GetRuleContext<Program_statementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 74; program_statement();
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EOL) | (1L << KW_TRUE) | (1L << KW_FALSE) | (1L << KW_IF) | (1L << KW_FOR) | (1L << KW_RETURN) | (1L << KW_LET) | (1L << KW_NAMESPACE) | (1L << KW_USING) | (1L << TYPE_NULL) | (1L << LSQR) | (1L << LCURL) | (1L << LPAREN) | (1L << SYM_DOLLAR) | (1L << OP_NOT) | (1L << OP_SUB) | (1L << IDENTIFIER) | (1L << STRING) | (1L << NUMBER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Program_statementContext : ParserRuleContext {
		public Namespace_declarationContext namespace_declaration() {
			return GetRuleContext<Namespace_declarationContext>(0);
		}
		public ITerminalNode EOL() { return GetToken(ShellParser.EOL, 0); }
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public Program_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Program_statementContext program_statement() {
		Program_statementContext _localctx = new Program_statementContext(Context, State);
		EnterRule(_localctx, 2, RULE_program_statement);
		try {
			State = 83;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_NAMESPACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79; namespace_declaration();
				State = 80; Match(EOL);
				}
				break;
			case EOL:
			case KW_TRUE:
			case KW_FALSE:
			case KW_IF:
			case KW_FOR:
			case KW_RETURN:
			case KW_LET:
			case KW_USING:
			case TYPE_NULL:
			case LSQR:
			case LCURL:
			case LPAREN:
			case SYM_DOLLAR:
			case OP_NOT:
			case OP_SUB:
			case IDENTIFIER:
			case STRING:
			case NUMBER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ITerminalNode EOL() { return GetToken(ShellParser.EOL, 0); }
		public Load_namespaceContext load_namespace() {
			return GetRuleContext<Load_namespaceContext>(0);
		}
		public Program_shorthandContext program_shorthand() {
			return GetRuleContext<Program_shorthandContext>(0);
		}
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ControlContext control() {
			return GetRuleContext<ControlContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 85; Match(EOL);
				}
				break;
			case KW_USING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 86; load_namespace();
				State = 87; Match(EOL);
				}
				break;
			case SYM_DOLLAR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 89; program_shorthand();
				State = 90; Match(EOL);
				}
				break;
			case KW_LET:
				EnterOuterAlt(_localctx, 4);
				{
				State = 92; declaration();
				State = 93; Match(EOL);
				}
				break;
			case KW_TRUE:
			case KW_FALSE:
			case TYPE_NULL:
			case LSQR:
			case LCURL:
			case LPAREN:
			case OP_NOT:
			case OP_SUB:
			case IDENTIFIER:
			case STRING:
			case NUMBER:
				EnterOuterAlt(_localctx, 5);
				{
				State = 95; expression();
				State = 96; Match(EOL);
				}
				break;
			case KW_IF:
			case KW_FOR:
			case KW_RETURN:
				EnterOuterAlt(_localctx, 6);
				{
				State = 98; control();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Load_namespaceContext : ParserRuleContext {
		public ITerminalNode KW_USING() { return GetToken(ShellParser.KW_USING, 0); }
		public ITerminalNode STRING() { return GetToken(ShellParser.STRING, 0); }
		public ITerminalNode KW_AS() { return GetToken(ShellParser.KW_AS, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(ShellParser.IDENTIFIER, 0); }
		public Load_namespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_load_namespace; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoad_namespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Load_namespaceContext load_namespace() {
		Load_namespaceContext _localctx = new Load_namespaceContext(Context, State);
		EnterRule(_localctx, 6, RULE_load_namespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(KW_USING);
			State = 102; Match(STRING);
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==KW_AS) {
				{
				State = 103; Match(KW_AS);
				State = 104; Match(IDENTIFIER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_declarationContext : ParserRuleContext {
		public ITerminalNode KW_NAMESPACE() { return GetToken(ShellParser.KW_NAMESPACE, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(ShellParser.IDENTIFIER, 0); }
		public ITerminalNode LCURL() { return GetToken(ShellParser.LCURL, 0); }
		public ITerminalNode RCURL() { return GetToken(ShellParser.RCURL, 0); }
		public ITerminalNode EOL() { return GetToken(ShellParser.EOL, 0); }
		public Namespaced_statementContext[] namespaced_statement() {
			return GetRuleContexts<Namespaced_statementContext>();
		}
		public Namespaced_statementContext namespaced_statement(int i) {
			return GetRuleContext<Namespaced_statementContext>(i);
		}
		public Namespace_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace_declaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Namespace_declarationContext namespace_declaration() {
		Namespace_declarationContext _localctx = new Namespace_declarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_namespace_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(KW_NAMESPACE);
			State = 108; Match(IDENTIFIER);
			State = 109; Match(LCURL);
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 110; Match(EOL);
				}
				break;
			}
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EOL) | (1L << KW_NAMESPACE) | (1L << KW_USING) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 113; namespaced_statement();
				}
				}
				State = 118;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 119; Match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespaced_statementContext : ParserRuleContext {
		public ITerminalNode EOL() { return GetToken(ShellParser.EOL, 0); }
		public Namespaced_declarationContext namespaced_declaration() {
			return GetRuleContext<Namespaced_declarationContext>(0);
		}
		public Namespace_declarationContext namespace_declaration() {
			return GetRuleContext<Namespace_declarationContext>(0);
		}
		public Load_namespaceContext load_namespace() {
			return GetRuleContext<Load_namespaceContext>(0);
		}
		public Namespaced_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaced_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaced_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Namespaced_statementContext namespaced_statement() {
		Namespaced_statementContext _localctx = new Namespaced_statementContext(Context, State);
		EnterRule(_localctx, 10, RULE_namespaced_statement);
		try {
			State = 131;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EOL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; Match(EOL);
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; namespaced_declaration();
				State = 123; Match(EOL);
				}
				break;
			case KW_NAMESPACE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 125; namespace_declaration();
				State = 126; Match(EOL);
				}
				break;
			case KW_USING:
				EnterOuterAlt(_localctx, 4);
				{
				State = 128; load_namespace();
				State = 129; Match(EOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespaced_declarationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(ShellParser.IDENTIFIER, 0); }
		public ITerminalNode OP_ASSGN() { return GetToken(ShellParser.OP_ASSGN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public Namespaced_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaced_declaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaced_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Namespaced_declarationContext namespaced_declaration() {
		Namespaced_declarationContext _localctx = new Namespaced_declarationContext(Context, State);
		EnterRule(_localctx, 12, RULE_namespaced_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133; Match(IDENTIFIER);
			State = 134; Match(OP_ASSGN);
			State = 137;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_TRUE:
			case KW_FALSE:
			case TYPE_NULL:
			case LSQR:
			case LCURL:
			case LPAREN:
			case OP_NOT:
			case OP_SUB:
			case IDENTIFIER:
			case STRING:
			case NUMBER:
				{
				State = 135; expression();
				}
				break;
			case KW_FUN:
				{
				State = 136; function();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Program_shorthandContext : ParserRuleContext {
		public ITerminalNode SYM_DOLLAR() { return GetToken(ShellParser.SYM_DOLLAR, 0); }
		public ITerminalNode[] EOL() { return GetTokens(ShellParser.EOL); }
		public ITerminalNode EOL(int i) {
			return GetToken(ShellParser.EOL, i);
		}
		public Program_shorthandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program_shorthand; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram_shorthand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Program_shorthandContext program_shorthand() {
		Program_shorthandContext _localctx = new Program_shorthandContext(Context, State);
		EnterRule(_localctx, 14, RULE_program_shorthand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; Match(SYM_DOLLAR);
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << KW_TRUE) | (1L << KW_FALSE) | (1L << KW_IF) | (1L << KW_ELSE) | (1L << KW_FOR) | (1L << KW_IN) | (1L << KW_RETURN) | (1L << KW_LET) | (1L << KW_FUN) | (1L << KW_IS) | (1L << KW_NAMESPACE) | (1L << KW_USING) | (1L << KW_AS) | (1L << TYPE_OBJECT) | (1L << TYPE_ARRAY) | (1L << TYPE_NUMBER) | (1L << TYPE_STRING) | (1L << TYPE_BOOL) | (1L << TYPE_ANY) | (1L << TYPE_NULL) | (1L << LSQR) | (1L << RSQR) | (1L << LCURL) | (1L << RCURL) | (1L << LPAREN) | (1L << RPAREN) | (1L << SYM_PERIOD) | (1L << SYM_COMMA) | (1L << SYM_QUOTE) | (1L << SYM_COLON) | (1L << SYM_DOLLAR) | (1L << OP_ASSGN) | (1L << OP_EQ) | (1L << OP_NE) | (1L << OP_LT) | (1L << OP_LE) | (1L << OP_GT) | (1L << OP_GE) | (1L << OP_NOT) | (1L << OP_OR) | (1L << OP_AND) | (1L << OP_ADD) | (1L << OP_SUB) | (1L << OP_DIV) | (1L << OP_MUL) | (1L << OP_MOD) | (1L << IDENTIFIER) | (1L << STRING) | (1L << NUMBER) | (1L << NONDIGIT) | (1L << DIGIT) | (1L << NONZERO_DIGIT) | (1L << ZERO) | (1L << SIGN) | (1L << INT) | (1L << FRAC) | (1L << EXP) | (1L << HEX) | (1L << UNICODE) | (1L << ESC) | (1L << SAFECODEPOINT))) != 0)) {
				{
				{
				State = 140;
				_la = TokenStream.LA(1);
				if ( _la <= 0 || (_la==EOL) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_blockContext : ParserRuleContext {
		public ITerminalNode LCURL() { return GetToken(ShellParser.LCURL, 0); }
		public ITerminalNode RCURL() { return GetToken(ShellParser.RCURL, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public Statement_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShellVisitor<TResult> typedVisitor = visitor as IShellVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_blockContext statement_block() {
		Statement_blockContext _localctx = new Statement_blockContext(Context, State);
		EnterRule(_localctx, 16, RULE_statement_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(LCURL);
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EOL) | (1L << KW_TRUE) | (1L << KW_FALSE) | (1L << KW_IF) | (1L << KW_FOR) | (1L << KW_RETURN) | (1L << KW_LET) | (1L << KW_USING) | (1L << TYPE_NULL) | (1L << LSQR) | (1L << LCURL) | (1L << LPAREN) | (1L << SYM_DOLLAR) | (1L << OP_NOT) | (1L << OP_SUB) | (1L << IDENTIFIER) | (1L << STRING) | (1L << NUMBER))) != 0)) {
				{
				{
				State = 147; statement();
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 153; Match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
